--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/wangchi/using-es6-with-gulp#readme",
   "devDependencies": {
     "babel-core": "^6.3.17",
+    "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.5"
