--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.5"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
